syntax = "proto3";

package com.example.grpc;

// 定义一个简单的打招呼服务
service HelloService {
    // 简单的一元RPC方法
    rpc SayHello (HelloRequest) returns (HelloResponse);
    
    // 服务端流式RPC
    rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloResponse);
    
    // 客户端流式RPC
    rpc SayHelloClientStreaming (stream HelloRequest) returns (HelloResponse);
    
    // 双向流式RPC
    rpc SayHelloBidirectionalStreaming (stream HelloRequest) returns (stream HelloResponse);
}

// 请求消息
message HelloRequest {
    string name = 1;
}

// 响应消息
message HelloResponse {
    string message = 1;
}